six z-index issue

--- a/interface/css/expose.css
+++ b/interface/css/expose.css
@@ -17,7 +17,7 @@ ex-row:after, .ex-block:after { content: "."; display: block; height: 0; clear: 
 * html, * html .ex-block{height: 1%;}
 /* end hide from IE-mac */
 
-.ex-row {margin-right: auto; margin-left: auto; text-align: left; position :relative; clear:left; z-index: 1;}
+.ex-row {margin-right: auto; margin-left: auto; text-align: left; position :relative; clear:left;}
     .ex-column, .ex-column-last {float:left; margin-right:-1px;}
         .ex-block {padding: 10px; margin:10px; position: relative; display: block; min-height: 0;height: 100%}
             .no-title .ex-header{display: none;}
